[package]
name = "steam_server_disable"
version = "0.2.4+dev"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A GUI tool to block access to Steam (CSGO/Dota) servers region-wise."
homepage = "https://github.com/ishbosamiya/steam_server_disable"
repository = "https://github.com/ishbosamiya/steam_server_disable"
keywords = ["steam", "firewall", "gui"]

[[bin]]
name = "steam_server_disable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
curl = "0.4"
# `openssl-sys`'s version depends on `curl`'s version
#
# `openssl-sys` has feature `vendored` so that it gets statically
# linked, otherwise `libssl1.1` is required which not all systems have
#
# reference: <https://github.com/cross-rs/cross/wiki/Recipes#vendored>
openssl-sys = { version = "0.9", features = ["vendored"] }
egui_glfw = { git = "https://github.com/ishbosamiya/egui_glfw.git", tag = "v0.2.0" }
glfw = "0.41"
gl = "0.14"
nalgebra-glm = "0.13"
icmp-socket = "0.2"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
directories = "4.0"
regex = "1.10"
clap = { version = "4.0", features = ["derive", "env"] }

[target.'cfg(unix)'.dependencies]
iptables = "0.4.3"
sudo = "0.6"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"

[profile.release-with-symbols]
inherits = "release"
debug = true